--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -289,7 +289,8 @@ a {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: "box-c1 box-c2"
+    grid-template-areas:
+        "box-c1 box-c2"
         "box-c1 box-c2"
         "box-c1 box-c2"
         "box-c3 box-c3"
@@ -543,30 +544,29 @@ a {
         }
     }
 
-    /*     .main_us {
-        height: 61vh;
-        background-image: url("../assets/img/us-tbl.png");
-        background-size: none;
-
-        .historia-tbl-mbl {
-            display: none;
+    .main_us {
+        .container-us {
+            width: 100%;
+            height: 65vh;
+            margin-top: 10vh;
+            overflow-y: auto;
         }
-    } */
+    }
 
     /**** SECC CONTACTO ****/
     .main_contact {
-        height: 83vh;
+        height: 77vh;
 
         .form-contact {
-            height: 50vh;
+            height: 40vh;
             line-height: 8px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             background-image: url("../assets/img/contacto-tbl.jpg");
+            background-size: cover;
             border: 1px solid rgb(211, 211, 211);
-
             border-radius: 20px;
             @include box-shadow;
             padding-top: 0%;
@@ -696,47 +696,38 @@ a {
         }
     }
 
-    /**** SECC SUCURSALES ****/
+    /**** SECC US ****/
 
+    .main_us {
+        padding-bottom: 0;
 
+        .container-us {
+            width: 120vw;
+            height: 90vh;
+            margin-top: 0vh;
+            overflow-y: auto;
 
-    /*     .main_us {
-        height: 70vh;
-        background-image: none;
-        box-shadow: none;
-        padding-top: 0;
+            .historia {
+                padding: 15px;
+                height: 60em;
+                background-color: rgb(255, 255, 255, 80%);
 
-        .carrusel-fijo {
-            display: flex;
-        }
-
-        .historia-mbl {
-            display: flex;
-            flex-direction: column;
-            padding: 0;
-
-            .txt-historia {
-                font-size: 20px;
-                margin-top: 70px;
-            }
-
-            h2 {
-                text-decoration: underline;
-                font-size: 30px;
-
-                span {
-                    color: $color-principal;
-                    text-decoration: underline;
+                img {
+                    float: none;
+                    width: 100%;
+                    padding: 0;
+                    margin: 0;
                 }
-
             }
         }
-    } */
+    }
 
     /**** SECC CONTACTO ****/
 
     .main_contact {
-        height: 120vh;
+        height: 75vh;
+        padding: 0;
+        margin: 0;
 
         .box-c1,
         .box-c2 {
@@ -748,12 +739,14 @@ a {
         }
 
         .form-contact {
-            height: 75vh;
+            height: 70vh;
             line-height: 5px;
+            background-size: 13.5em 30em;
             padding: 50px;
             border-radius: 20px;
             @include box-shadow;
-            padding-top: 0%;
+            padding-top: 10%;
+            margin-top: 0;
             font-size: 20px
         }
     }
